--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,20 +9,20 @@ jobs:
   detect_changes:
     runs-on: ubuntu-latest
     outputs:
-      api_changed: ${{ steps.changes.outputs.api_changed }}
-      frontend_changed: ${{ steps.changes.outputs.frontend_changed }}
+      api_changed: ${{ steps.filter.outputs.api }}
+      frontend_changed: ${{ steps.filter.outputs.frontend }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Detect changes
-        id: changes
+        id: filter
         uses: dorny/paths-filter@v2
         with:
           filters: |
-            api_changed:
+            api:
               - 'TaskManagerAPI/**'
-            frontend_changed:
+            frontend:
               - 'TaskManagerFrontEnd/**'
 
   deploy_api:
@@ -30,8 +30,8 @@ jobs:
     if: needs.detect_changes.outputs.api_changed == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
@@ -39,33 +39,29 @@ jobs:
           dotnet-version: '9.0'
 
       - name: Build API
-        working-directory: TaskManagerAPI
-        run: |
-          dotnet restore
-          dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release
 
       - name: Publish API
-        working-directory: TaskManagerAPI
-        run: |
-          dotnet publish -c Release -o ./publish
+        run: dotnet publish -c Release -o api_output
 
       - name: Deploy API to Azure Web App
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'YOUR_AZURE_API_APP_NAME'
+          app-name: 'TaskManagerAPI'
+          slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: TaskManagerAPI/publish
+          package: api_output
 
   deploy_frontend:
     needs: detect_changes
     if: needs.detect_changes.outputs.frontend_changed == 'true'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: '20'
 
@@ -73,16 +69,15 @@ jobs:
         working-directory: TaskManagerFrontEnd
         run: npm install
 
-      - name: Build Angular app
+      - name: Build Frontend
         working-directory: TaskManagerFrontEnd
-        run: npm run build -- --configuration production
+        run: npm run build
 
-      - name: Deploy Frontend to Azure Static Web Apps
+      - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_TOKEN }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "TaskManagerFrontEnd/dist"
-          api_location: ""
-          output_location: "TaskManagerFrontEnd/dist"
+          action: 'upload'
+          app_location: 'TaskManagerFrontEnd'
+          output_location: 'TaskManagerFrontEnd/dist/task-manager-frontend'
