--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: 
 
 jobs:
   detect_changes:
@@ -11,6 +12,7 @@ jobs:
     outputs:
       api_changed: ${{ steps.filter.outputs.api }}
       frontend_changed: ${{ steps.filter.outputs.frontend }}
+      force_deploy: ${{ github.event_name == 'workflow_dispatch' }} 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -27,7 +29,7 @@ jobs:
 
   deploy_api:
     needs: detect_changes
-    if: needs.detect_changes.outputs.api_changed == 'true'
+    if: needs.detect_changes.outputs.api_changed == 'true' || needs.detect_changes.outputs.force_deploy == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -54,7 +56,7 @@ jobs:
 
   deploy_frontend:
     needs: detect_changes
-    if: needs.detect_changes.outputs.frontend_changed == 'true'
+    if: needs.detect_changes.outputs.frontend_changed == 'true' || needs.detect_changes.outputs.force_deploy == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -63,7 +65,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '22'
 
       - name: Install dependencies
         working-directory: TaskManagerFrontEnd
@@ -71,13 +73,12 @@ jobs:
 
       - name: Build Frontend
         working-directory: TaskManagerFrontEnd
-        run: npm run build
+        run: npm run build --prod
 
-      - name: Deploy to Azure Static Web Apps
-        uses: Azure/static-web-apps-deploy@v1
+      - name: Deploy Frontend to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: 'upload'
-          app_location: 'TaskManagerFrontEnd'
-          output_location: 'TaskManagerFrontEnd/dist/task-manager-frontend'
+          app-name: 'TaskManagerFrontend'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
+          package: TaskManagerFrontEnd/dist/task-manager-frontend
